<resources>
    <string name="app_name">TestQSkinLoader</string>
    <string name="current_apk_inside_change_skin">Change skin in current apk</string>
    <string name="installed_apk_change_skin">change skin by installed apk </string>
    <string name="change_text_size">switch text size</string>

    <string name="installed_apk_text_content">Default skin</string>
    <string name="good_morning">Good Morning!!!</string>
    <string name="good_afternoon">Good Afternoon!!!</string>
    <string name="good_evening">Good Evening!!!</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="change_lan">switch language</string>

</resources>
