<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    skin:enable="true"
    tools:context="com.example.test.testqskinloader.MainActivity">

    <Button
        android:id="@+id/current_apk_inside_change_skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/current_apk_inside_change_skin"/>

    <Button
        android:id="@+id/installed_apk_change_skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_apk_inside_change_skin"
        android:layout_centerHorizontal="true"
        android:text="@string/installed_apk_change_skin"/>

    <Button
        android:id="@+id/change_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/installed_apk_change_skin"
        android:layout_centerHorizontal="true"
        android:text="@string/change_text_size"/>

</RelativeLayout>
